refactor: rename query to lookup in stepper API for improved clarity
- Replaced all instances of `query` with `lookup` in the stepper API to better reflect its functionality.
- Updated related documentation and examples to align with the new naming convention, enhancing developer understanding.
- Ensured consistency across components by revising method calls and type definitions to use the `lookup` terminology.

--- a/apps/docs/content/docs/react/api-references/define.mdx
+++ b/apps/docs/content/docs/react/api-references/define.mdx
@@ -24,13 +24,13 @@ Each step must have a unique `id`. You can add any custom properties (`title`, `
 | Property | Type | Description |
 | -------- | ---- | ----------- |
 | `steps` | `Steps` | The array of step objects you passed |
-| `useStepper` | `(props?) => Stepper` | Hook for state, navigation, query, flow, metadata ([Hook](./hook)) |
+| `useStepper` | `(props?) => Stepper` | Hook for state, navigation, lookup, flow, metadata ([Hook](./hook)) |
 | `Scoped` | `Component` | Provider for stepper context ([Scoped](./scoped)) |
 | `Stepper` | `StepperPrimitives<Steps>` | Type-safe UI primitives ([Primitives](./primitives)) |
 
 ## Next steps
 
 - [Primitives](./primitives) – Build the stepper UI
-- [useStepper](./hook) – State, navigation, query, flow, metadata
+- [useStepper](./hook) – State, navigation, lookup, flow, metadata
 - [Scoped](./scoped) – Share stepper state
-- [Query](./query) – Step lookup (via `stepper.query` or `generateStepperUtils` from core)
+- [Lookup](./lookup) – Step lookup (via `stepper.lookup` or `generateStepperUtils` from core)
