--- a/apps/docs/content/docs/react/api-references/schema-validation.mdx
+++ b/apps/docs/content/docs/react/api-references/schema-validation.mdx
@@ -92,7 +92,7 @@ function MyForm() {
   const currentSchema = stepper.state.current.data.schema;
 
   // Step by ID
-  const personalStep = stepper.query.get("personal");
+  const personalStep = stepper.lookup.get("personal");
   const personalSchema = personalStep?.schema;
 
   return <div>Schema available: {currentSchema ? "Yes" : "No"}</div>;
@@ -141,5 +141,5 @@ const { useStepper } = defineStepper(
 ```
 
 <Callout type="info">
-  Steps are plain objects. If you add a `schema` property, access it as `stepper.state.current.data.schema` or `stepper.query.get(id)?.schema`. The last step can have an empty schema or no schema; check for existence when needed.
+  Steps are plain objects. If you add a `schema` property, access it as `stepper.state.current.data.schema` or `stepper.lookup.get(id)?.schema`. The last step can have an empty schema or no schema; check for existence when needed.
 </Callout>
