--- a/apps/docs/content/docs/react/index.mdx
+++ b/apps/docs/content/docs/react/index.mdx
@@ -130,4 +130,5 @@ stepper.lifecycle.onBeforeTransition(async (ctx) => (await validateForm()) || fa
 - [Installation](/docs/react/installation)
 - [API Reference - defineStepper](/docs/react/api-references/define)
 - [API Reference - useStepper](/docs/react/api-references/hook)
+- [API Reference - Primitives](/docs/react/api-references/primitives)
 - [Examples](/docs/react/examples)
