--- a/apps/docs/content/docs/react/migration/migrating-to-v2.mdx
+++ b/apps/docs/content/docs/react/migration/migrating-to-v2.mdx
@@ -58,3 +58,7 @@ const { useStepper } = defineStepper(
 ```
 
 For more information, see the [Hook](/docs/react/api-references/hook) section.
+
+<Callout type="info">
+  In v6, `Scoped` uses `initialStep` and `initialMetadata` instead of `initial`. See [Migrating to v6](./migrating-to-v6) when upgrading from v2 to v6.
+</Callout>
