--- a/apps/docs/content/docs/react/migration/migrating-to-v5.mdx
+++ b/apps/docs/content/docs/react/migration/migrating-to-v5.mdx
@@ -8,6 +8,8 @@ icon: CircleFadingArrowUp
   For the latest migration guide (v5 to v6), see [Migrating to v6](./migrating-to-v6).
 </Callout>
 
+In v6 the config was simplified again: `useStepper` and `Scoped` now take `initialStep` and `initialMetadata` at the top level (no `initial` object), and initial `statuses` were removed (status is derived from position). If you are on v5 and upgrading to v6, follow the [v6 migration guide](./migrating-to-v6) instead.
+
 Stepperize v5 adds a new `metadata` API to the `useStepper` hook
 
 ## Breaking Changes
