--- a/apps/docs/content/docs/react/migration/migrating-to-v6.mdx
+++ b/apps/docs/content/docs/react/migration/migrating-to-v6.mdx
@@ -1,40 +1,182 @@
 ---
-title: Current API (v6)
-description: Summary of the current Stepperize API
+title: Migrating to v6
+description: Guide to migrating from v5 to Stepperize v6
 icon: CircleFadingArrowUp
 ---
 
-This page summarizes the current API. For full details see [Define](/docs/react/api-references/define) and [Hook](/docs/react/api-references/hook).
+v6 simplifies the API: a single state shape, explicit lifecycle hooks, no persistence or progress tracking, and typed primitives with render props. This guide walks through the changes and how to update your code.
 
 ## defineStepper
 
-- **Signature:** `defineStepper(...steps)` — only the steps array (or spread steps). No second config argument.
-- **Returns:** `{ steps, Scoped, useStepper, Stepper }`.
+**Before (v5):** Possibly a second config argument in some setups.
 
-## useStepper
+**Now:** Only steps. No second argument.
 
-- **Config:** `useStepper({ initialStep?, initialMetadata? })` — optional. No `initial`, `mode`, or global transition callbacks.
-- **Returns:** Stepper object with five namespaces plus transition state:
-  - **state:** `all`, `current` (data, index, status, metadata: get/set/reset), `isFirst`, `isLast`, `isTransitioning`
-  - **navigation:** `next()`, `prev()`, `goTo(id)`, `reset()`
-  - **lookup:** `getAll()`, `get(id)`, `getIndex(id)`, `getByIndex(i)`, `getFirst`, `getLast`, `getNext`, `getPrev`, `getNeighbors(id)`
-  - **flow:** `when()`, `switch()`, `match()`
-  - **metadata:** `values`, `set(id, values)`, `get(id)`, `reset(keepInitial?)`
-  - **Transition hooks:** Register via `stepper.lifecycle.onBeforeTransition(cb)` and `stepper.lifecycle.onAfterTransition(cb)`; they run on every `next`/`prev`/`goTo`. Return `false` from the before callback to cancel.
-  - **Top-level:** `isTransitioning`
+```tsx
+const { steps, Scoped, useStepper, Stepper } = defineStepper(
+  { id: "first", title: "First" },
+  { id: "second", title: "Second" }
+);
+```
+
+See [Define](/docs/react/api-references/define) for the full API.
+
+## useStepper — configuration
+
+**Before (v5):** Nested `initial` object with `step`, `metadata`, and `statuses`:
+
+```tsx
+useStepper({
+  initial: {
+    step: "second",
+    metadata: { first: { saved: true } },
+    statuses: { ... },
+  },
+});
+```
+
+**Now:** Top-level `initialStep` and `initialMetadata`. No initial statuses (status is derived from position: active / success / inactive).
+
+```tsx
+useStepper({
+  initialStep: "second",
+  initialMetadata: { first: { saved: true } },
+});
+```
+
+## useStepper — state shape
+
+**Before (v5):** Names like `currentStep`, `steps`, `get` / `getStepById` at top level or under different keys.
+
+**Now:** Everything lives under `state`, `navigation`, `lookup`, `flow`, `metadata`, and `lifecycle`:
+
+| v5 (conceptual) | v6 |
+| ----------------- | --- |
+| Current step object | `stepper.state.current.data` |
+| Current step index | `stepper.state.current.index` |
+| Current step status | `stepper.state.current.status` |
+| Metadata for current step | `stepper.state.current.metadata.get()` / `.set(values)` / `.reset()` |
+| All steps | `stepper.state.all` (not `stepper.steps`) |
+| First/Last/Transitioning | `stepper.state.isFirst`, `stepper.state.isLast`, `stepper.state.isTransitioning` |
+
+Step-by-ID lookup is under **lookup**, not at the top level: use `stepper.lookup.get(id)` instead of `stepper.get(id)`.
+
+See [Hook](/docs/react/api-references/hook) for the full structure.
+
+## Lookup (formerly "query")
+
+**Before:** If you used `stepper.query` or similar helpers.
+
+**Now:** `stepper.lookup` with the same idea, clearer name:
+
+- `lookup.getAll()` — all steps
+- `lookup.get(id)` — step by ID
+- `lookup.getIndex(id)`, `lookup.getByIndex(index)`
+- `lookup.getFirst()`, `lookup.getLast()`
+- `lookup.getNext(id)`, `lookup.getPrev(id)`, `lookup.getNeighbors(id)`
+
+There is no `stepper.steps` on the stepper object; use `stepper.state.all` for the list of steps.
+
+See [Lookup](/docs/react/api-references/lookup) for details and `generateStepperUtils` from core when you need lookup without a stepper instance.
+
+## Navigation
+
+**Now:** Same idea, under `navigation`:
+
+- `stepper.navigation.next()`
+- `stepper.navigation.prev()`
+- `stepper.navigation.goTo(id)`
+- `stepper.navigation.reset()`
+
+If v5 used different names (e.g. `goToNextStep`), replace them with the names above.
 
 ## Scoped
 
-- **Props:** `initialStep?`, `initialMetadata?`, `children` — no `initial` object or `statuses`.
+**Before (v5):** `initial` prop with nested `step`, `metadata`, `statuses`.
 
-## Step and current
+**Now:** Flat props:
 
-- `stepper.state.current.data` is the **step object** (e.g. `{ id, title }`).
-- `stepper.state.current.index` is the current step index.
-- Use `stepper.state.all` for the list of steps (not `stepper.steps`).
-- Use `stepper.lookup.get(id)` to get a step by ID (not `stepper.get(id)` at top level).
-- Step-level UI status (`active` / `success` / `inactive`) comes from primitives (e.g. `useStepItemContext().status`), not from a global status record.
+- `initialStep?` — initial active step ID
+- `initialMetadata?` — initial metadata per step
+- `children`
 
-## Core package
+No `initial` object and no `statuses` prop.
 
-`@stepperize/core` exports types (`Step`, `Stepper`, `StepperState`, `StepperNavigation`, `StepperLookup`, `StepperFlow`, `StepperMetadata`, `Get`, `Utils`) and pure helpers (`generateStepperUtils`, `getInitialStepIndex`, `getInitialMetadata`, `generateCommonStepperUseFns`, `updateStepIndex`). The React package uses these; you typically use `@stepperize/react` only. Use `generateStepperUtils(...steps)` when you need step lookup without a stepper instance (see [Lookup](/docs/react/api-references/lookup)).
+See [Scoped](/docs/react/api-references/scoped).
+
+## Transitions and lifecycle
+
+**Before:** Global or config-level transition callbacks (if you had them).
+
+**Now:** Register callbacks on the stepper instance:
+
+- `stepper.lifecycle.onBeforeTransition(cb)` — runs before every `next` / `prev` / `goTo`. Return `false` (or a promise that resolves to `false`) to cancel.
+- `stepper.lifecycle.onAfterTransition(cb)` — runs after the transition.
+
+The callback receives a **TransitionContext**: `from`, `to`, `metadata`, `statuses`, `direction` (`"next"` | `"prev"` | `"goTo"`), `fromIndex`, `toIndex`.
+
+Transition state: use `stepper.state.isTransitioning` (not a top-level property).
+
+See [Hook — Transition hooks](/docs/react/api-references/hook#transition-hooks) and [Types — TransitionContext](/docs/react/api-references/types#transitioncontext).
+
+## Flow
+
+**New in v6:** `stepper.flow.is(id)` for simple conditionals:
+
+```tsx
+if (stepper.flow.is("payment")) {
+  return <PaymentForm />;
+}
+// or in JSX
+{stepper.flow.is("confirmation") && <Summary />}
+```
+
+`flow.when`, `flow.switch`, and `flow.match` continue to work as before.
+
+## Removed in v6
+
+The following are no longer part of the API:
+
+- **Persistence / persist** — no built-in persist layer.
+- **History** — no history stack or back/forward API.
+- **Progress** — no dedicated progress-tracking API (derive from `state.current.index` and `state.all.length` if needed).
+- **Initial statuses** — you can’t set initial statuses; status is derived from position (active / success / inactive) and is available via primitives (e.g. `useStepItemContext().status`) or when rendering the list yourself.
+
+## Primitives
+
+v6 introduces a full set of typed primitives under `Stepper`:
+
+- **Stepper.Root** — container; accepts `orientation?`, `initialStep?`, `initialMetadata?`, and `children` as render prop `({ stepper }) => ...` or node.
+- **Stepper.List**, **Stepper.Item** — list structure; each `Item` takes a `step` (step ID).
+- **Stepper.Trigger**, **Stepper.Indicator**, **Stepper.Title**, **Stepper.Description** — trigger and label content.
+- **Stepper.Separator** — between steps.
+- **Stepper.Content** — panel per step; requires `step` prop; visible only when that step is current.
+- **Stepper.Actions**, **Stepper.Prev**, **Stepper.Next** — navigation buttons.
+
+Use them inside `Scoped` (or inside `Stepper.Root`, which uses Scoped internally). For item-level data (e.g. status, step data) inside `Stepper.Item`, use `useStepItemContext()` from `@stepperize/react/primitives` — it returns the same shape as `state.current` for that item.
+
+See [Primitives](/docs/react/api-references/primitives) for the full reference.
+
+## Summary table
+
+| Area | v5 | v6 |
+| ---- | --- | --- |
+| defineStepper | Possibly second argument | `defineStepper(...steps)` only |
+| useStepper config | `initial: { step, metadata, statuses }` | `initialStep?`, `initialMetadata?` |
+| Current step | e.g. `currentStep` | `state.current.data` |
+| All steps | e.g. `steps` on stepper | `state.all` |
+| Step by ID | e.g. `get(id)` at top level | `lookup.get(id)` |
+| Scoped props | `initial` object | `initialStep?`, `initialMetadata?` |
+| Transition callbacks | Config or global | `lifecycle.onBeforeTransition` / `onAfterTransition` |
+| Conditional by step | `when` / `switch` | + `flow.is(id)` |
+| Persist / history / progress | If present | Removed |
+| UI components | Varies | `Stepper.Root`, `.List`, `.Item`, etc. |
+
+## Full API reference
+
+For the complete v6 API, see:
+
+- [Define](/docs/react/api-references/define)
+- [Hook](/docs/react/api-references/hook)
+- [Primitives](/docs/react/api-references/primitives)
+- [Types](/docs/react/api-references/types)
