refactor: enhance Step type and update migration documentation for clarity
- Updated the `Step` type to support generic ID and data types, improving flexibility and type safety.
- Revised migration documentation to clarify changes in API usage, specifically the transition from `query` to `lookup` and the removal of certain features in v6.
- Improved the documentation for `useStepItemContext` to better explain its purpose and usage within `Stepper.Item`, enhancing developer understanding.

--- a/apps/docs/content/docs/react/api-references/types.mdx
+++ b/apps/docs/content/docs/react/api-references/types.mdx
@@ -10,7 +10,9 @@ Types are exported from `@stepperize/core` and `@stepperize/react`.
 ### Step
 
 ```ts
-type Step = { id: string } & Record<string, any>;
+type Step<Id extends string = string, Data extends object = {}> = {
+    id: Id;
+} & Data;
 ```
 
 Steps must have a unique `id`; other properties are free. In core, `Step` is generic (`Step<Id, Data>`) for stricter inference; the simplified form above is enough for most usage.
